<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JoggerApp</string>
    <string name="action_settings">Settings</string>
    <string name="quickstart_label">Quick Start</string>
	<string name="createusr_label">Create New User</string>
	<string name="login_label">Login</string>
	<string name="quit_label">Quit</string>
	
	<string name="username">Username</string>
	<string name="age">Age</string>
	<string name="height">Height in cm</string>
	<string name="weight">Weight in Kg</string>
	<string name="password">Password</string>
	<string name="submit">Submit</string>
	<string name="login_but_label">Login</string>
	
	<string name="LatnLong">Lat and Long</string>
	<string name="Distance">Distance: </string>
	<string name="Speed">Speed: </string>
	<string name="Calories">Calories: </string>
	
	<string name="action_Alarms">Alarm </string>
	<string name="action_Mp3">Mp3 </string>
	<string name="action_profile">Profile </string>
	
	
</resources>
